--- a/templates/wagers/tournaments/details.html
+++ b/templates/wagers/tournaments/details.html
@@ -26,50 +26,76 @@
   {% endfor %}
   </ul>
   <h2>Propositions <small>You've Already Bet On</small></h2>
-       <table class="table">
-
+  <div class="accordion1">
     {% for bet in bets %}
-        {% if bet.proposition.is_paid %}
-          <tr class="alert {% if bet.is_won %}alert-success{% else %}alert-error{% endif %}">
-            <td>
-              <h3>Prop</h3>
-              <b>{{ bet.proposition }}</b>
-            </td>
-            <td>
-              <h3>Your Position</h3>
-              <b>{{ bet.get_position }}</b>
-            </td>
-            <td >
-              <h3>Outcome</h3>
-              <b><b>{% if bet.is_won %}Won{% else %}Lost{% endif %}</b></b>
-            </td>
-            <td class="table-button">
-              <a class="btn {% if bet.is_won %}btn-success{% else %}btn-danger{% endif %}" href="#details">Show Details</a>
-            </td>
-          </tr>
-          
-        {% else %}
-          <tr class="alert alert-warning">
-            <td>
-              <h3>Prop</h3>
-              <b>{{ bet.proposition }}</b>
-            </td>
-            <td>
-              <h3>Your Position</h3>
-              <b>{{ bet.get_position }}</b>
-            </td>
-            <td >
-              <h3>Outcome</h3>
-              <b>Ongoing...</b>
-            </td>
-            <td class="table-button">
-              <a class="btn btn-warning" href="#details">Show Details</a>
-            </td>
-          </tr>
-        {% endif %}
+      {% if bet.proposition.is_paid %}
+        <div class="accordion-group">
+          <div class="accordion-heading">
+            <div class="bet-info clickable alert {% if bet.is_won %}alert-success{% else %}alert-error{% endif %}" href="#bet-{{ bet.id }}" data-toggle="collapse" data-parent="#accordion1" >
+              <div> 
+                <h3>Prop</h3>
+                <b>{{ bet.proposition }}</b>
+              </div>
+              <div>
+                <h3>Your Position</h3>
+                <b>{{ bet.get_position }}</b>
+              </div>
+              <div>
+                <h3>Outcome</h3>
+                <b>{% if bet.is_won %}Won{% else %}Lost{% endif %}</b>
+              </div>
+              <div class="table-button">
+                <a class="btn {% if bet.is_won %}btn-success{% else %}btn-danger{% endif %}" href="#details">Show Details</a>
+              </div>
+            </div>
+          </div>
+          <div id="bet-{{ bet.id }}" style="height: 0px;" class="accordion-body collapse">
+            <div class="accordion-inner">
+              <table class="table table-condensed details-table">
+                <tr>
+                  <th>Player</th>
+                  <th>Position</th>
+                  <th>Amount Bet</th>
+                  <th>Amount Won</th>
+                </tr>
+                {% for info in bet.proposition.get_payout_information %}
+                  <tr class="alert {% if info.bet.is_won %}alert-success{% else %}alert-error{% endif %}">
+                    <td>{{ info.bet.created_by }}</td>
+                    <td>{{ info.bet.get_position }}</td>
+                    <td>{{ info.bet.credits }}</td>
+                    <td>{{ info.won }}</td>
+                  </tr>
+                {% endfor %}
+              </table>
+            </div>
+          </div>
+        </div>             
+      {% else %}
+        <div class="accordion-group">
+          <div class="accordion-heading">
+            <div class="bet-info alert alert-warning ">
+              <div>
+                <h3>Prop</h3>
+                <b>{{ bet.proposition }}</b>
+              </div>
+              <div>
+                <h3>Your Position</h3>
+                <b>{{ bet.get_position }}</b>
+              </div>
+              <div>
+                <h3>Outcome</h3>
+                <b>Ongoing...</b>
+              </div>
+              <div class="table-button">
+                <a class="btn btn-warning disabled" href="#details">Show Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endif %}
     {% empty %}
       <li>You haven't made any bets yet.</li>
     {% endfor %}
-  </table>
+  </div>
 </div>
 {% endblock %}
