--- a/templates/wagers/tournaments/details.html
+++ b/templates/wagers/tournaments/details.html
@@ -1,4 +1,5 @@
 {% extends "scaffolding.html" %}
+{% load humanize %}
 {% block content %}
 <div class="container">
   <h1>{{ tourney.name }}</h1>
@@ -16,7 +17,41 @@
     {% endfor %}
     </ul>
   {% endif %}
-  <p>Right now you have: {{ player.credits }} credit{{ player.credits|pluralize }}.</p>
+  <div id="accordion2">
+    <div class="accordion-group">
+      <div class="accordion-heading">
+        <div>
+          <a data-toggle="collapse" href="#leaderboard-toggle" class="btn btn-primary">View Leaderboard</a> 
+          You are curently in <b>{{ player.get_place | ordinal }} place</b> with {{ player.credits }} credit{{ player.credits | pluralize }}.
+        </div>
+      </div>
+      <div id="leaderboard-toggle" style="height: 0px;" class="accordion-body collapse">
+        <div class="accordion-inner">
+          <table class="table table-condensed">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Player</th>
+                <th>Credits</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for info in tourney.get_payout_information %}
+                <tr>
+                  <td rowspan="{{ info.players | length }}">{{ info.place | ordinal }}</td>
+                  {% for player in info.players %}
+                    {% if not player == info.players.0 %}<tr>{% endif %}
+                      <td>{{ player }}</td>
+                      <td>{{ player.credits }}</td>
+                    </tr>
+                  {% endfor %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
   <h2>Propositions <small>You Can Bet On</small></h2>
   <ul class="unstyled">
   {% for prop in bettable_props %}
@@ -26,12 +61,12 @@
   {% endfor %}
   </ul>
   <h2>Propositions <small>You've Already Bet On</small></h2>
-  <div class="accordion1">
+  <div id="accordion1">
     {% for bet in bets %}
       {% if bet.proposition.is_paid %}
         <div class="accordion-group">
           <div class="accordion-heading">
-            <div class="bet-info clickable alert {% if bet.is_won %}alert-success{% else %}alert-error{% endif %}" href="#bet-{{ bet.id }}" data-toggle="collapse" data-parent="#accordion1" >
+            <div class="bet-info clickable alert {% if bet.is_won %}alert-success{% else %}alert-error{% endif %}" href="#bet-{{ bet.id }}" data-toggle="collapse" >
               <div> 
                 <h3>Prop</h3>
                 <b>{{ bet.proposition }}</b>
