Design improvement, see issue #54.

--- a/templates/scaffolding.html
+++ b/templates/scaffolding.html
@@ -31,7 +31,7 @@
           {% else %}
             <form class="navbar-form pull-right" action="/login" method="GET">
               <input type="hidden" name="next" value="/">
-              <button class="btn" href="/login">Sign In</button>
+              <button class="btn" href="/login"><b>Sign In</b></button>
             </form>
           {% endif %}
         </div>
