--- a/templates/wagers/tournaments/snippets/pay_form.html
+++ b/templates/wagers/tournaments/snippets/pay_form.html
@@ -1,8 +1,5 @@
 <form method="post" action="{% url 'payout-tournament' tourney.uuid %}">
-  <fieldset>
-    <legend>Payout Tournament</legend>
-    {% csrf_token %}
-    {{ tournament_form }}
-    <br><button class="btn btn-primary" type="submit">Payout Tournament</button>
-  </fieldset>
+  {% csrf_token %}
+  {{ tournament_form }}
+  <button class="btn btn-primary" type="submit">Payout Tournament</button>
 </form>
