Updated tournament listing to reflect new admin page.

--- a/templates/wagers/tournaments/active-list.html
+++ b/templates/wagers/tournaments/active-list.html
@@ -14,7 +14,7 @@
   <h1>Tournaments I'm Running</h1>
   <ol class="unstyled">
     {% for tourney in tournaments %}
-        <li><a href="{{ tourney.get_absolute_url }}">{{ tourney }}</a> created by {{ tourney.created_by }} on {{ tourney.created_on }}</li>
+        <li><a href="{% url 'tournament-admin' tourney.uuid %}">{{ tourney }}</a> created by {{ tourney.created_by }} on {{ tourney.created_on }}</li>
     {% empty %}
       <li>You have no active tournaments.</li>
     {% endfor %}
