--- a/templates/wagers/admin_landing.html
+++ b/templates/wagers/admin_landing.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row-fluid">
 			<div class="span8">
-        <h1 class="heading">Coordinate Office Betting, With Ease</h2>
+        <h1 class="heading">Coordinate Betting, With Ease</h2>
         <p class="subheading">A website to keep track of casual betting at the office, from who forgot to bet all the way to who won the wagers.</p>
       </div>
       <div class="span4">
@@ -15,24 +15,31 @@
     </div>
   </div>
 </div>
-<hr>
+<hr/>
 <div id="teasers" class="container">
-  <div class="row-fluid">
-    <div class="span4 teaser">
-      <img src="/site_media/img/icons/Clock.png">
-      <h2>Save Time</h2>
-      <p>You don't have to spend hours asking people what they are betting on. People get to bet when its convenient for them.</p>
+  <section>
+    <div class="row-fluid">
+      <div class="span4 teaser">
+        <img src="/site_media/img/icons/Clock.png">
+        <h2>Save Time</h2>
+        <p>You don't have to spend hours asking people what they are betting on. People get to bet when its convenient for them.</p>
+      </div>
+      <div class="span4 teaser">
+        <img src="/site_media/img/icons/Gear.png">
+        <h2>Gain Freedom</h2>
+        <p>For some sports, you don't even have to tell us who won. We can figure that out. Just tell us what you want to bet on.</p>
+      </div>
+      <div class="span4 teaser">
+        <img src="/site_media/img/icons/Scanner.png">
+        <h2>Give Insight</h2>
+        <p>Players can go online to easily keep track of how their doing and how they have done. Help your friends gain insight into their own betting habits.</p>
+      </div>
     </div>
-    <div class="span4 teaser">
-      <img src="/site_media/img/icons/Gear.png">
-      <h2>Gain Freedom</h2>
-      <p>For some sports, you don't even have to tell us who won. We can figure that out. Just tell us what you want to bet on.</p>
-    </div>
-    <div class="span4 teaser">
-      <img src="/site_media/img/icons/Scanner.png">
-      <h2>Give Insight</h2>
-      <p>Players can go online to easily keep track of how their doing and how they have done. Help your friends gain insight into their own betting habits.</p>
-    </div>
-  </div>
+  </section>
 </div>
+<section class="container">
+  <div style="text-align: center;" class="alert alert-success lead">
+    Make props your friends can bet on or start betting yourself by <a href="{% url 'register' %}">signing up for free.</a>
+  </div>
+</section>
 {% endblock content %}
