Improved the registration form and rolling in misc commits.

--- a/templates/registration/snippets/register_form.html
+++ b/templates/registration/snippets/register_form.html
@@ -27,6 +27,7 @@
           {% endfor %}
         </div>
       </div>
+      <small>By clicking on 'Sign Up For Free' below, you agree to our <a>Terms of Service</a> and <a>Privacy Policy</a>.</small>
       <input name="next" type="hidden" value="{% if next %}{{ next }}{% else %}/{% endif %}" />
       <button class="btn btn-large btn-primary btn-block btn-reg" type="submit">Sign Up For Free</button>
     </div>
