--- a/templates/wagers/tournaments/share.html
+++ b/templates/wagers/tournaments/share.html
@@ -1,8 +1,10 @@
 {% extends 'scaffolding.html' %}
 {% block content %}
   <div class="container">
-    <h1>How to share</h1>
-    <p>To share the tournament with someone just give them this link: officeprops.com{% url 'tournament-details' tourney.uuid %}</p>
-    <p><a href="{% url 'tournament-details' tourney.uuid %}">Go to the tournament details page.</a></p>
+    <section>
+      <h1>How to share</h1>
+      <p>To share the tournament with someone just give them this link: officeprops.com{% url 'tournament-details' tourney.uuid %}</p>
+      <p><a href="{% url 'tournament-details' tourney.uuid %}">Go to the tournament details page.</a></p>
+    </section>
   </div>
 {% endblock %}
