--- a/templates/wagers/propositions/snippets/add_form.html
+++ b/templates/wagers/propositions/snippets/add_form.html
@@ -57,6 +57,8 @@
         </div>
       </div>
     </div>
+    <button class="btn btn-primary" type="submit">
+      <i class="icon-plus"></i> Add Proposition
+    </button>
   </fieldset>
-  <button class="btn btn-primary" type="submit">Add Proposition</button>
 </form>
