--- a/templates/wagers/tournaments/add.html
+++ b/templates/wagers/tournaments/add.html
@@ -1,60 +1,60 @@
 {% extends "scaffolding.html" %}
 {% block content %}
-
-<hr>
 <div class="container">
-  <form class="form" method="POST" action="{% url 'add-tournament' %}">
-    {% for hidden in form.hidden_fields %}
-      {{ hidden }}
-    {% endfor %}
-    <fieldset>
-      {% csrf_token %}
-      <div class="control-group {% if form.name.errors %}error{% endif %}">
-        <div class="controls">
-          <label for="name">Name</label>
-          <input class="input-xxlarge" type="text" name="name" {% if form.name.value %}value="{{ form.name.value }}"{% endif %} />
-          {% for error in form.errors.name %}
-            <span class="help-block">{{ error }}</span>
-          {% endfor %}
+  <section>
+    <form class="form" method="POST" action="{% url 'add-tournament' %}">
+      {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+      {% endfor %}
+      <fieldset>
+        {% csrf_token %}
+        <div class="control-group {% if form.name.errors %}error{% endif %}">
+          <div class="controls">
+            <label for="name">Name</label>
+            <input class="input-xxlarge" type="text" name="name" {% if form.name.value %}value="{{ form.name.value }}"{% endif %} />
+            {% for error in form.errors.name %}
+              <span class="help-block">{{ error }}</span>
+            {% endfor %}
+          </div>
         </div>
-      </div>
-      
-      <div class="control-group {% if form.description.errors %}error{% endif %}">
-        <div class="controls">
-          <label>Description</label>
-          <span class="help-block">{{ form.description.help_text }}</span>
-          <textarea rows="5" class="input-xxlarge" name="description">{% if form.description.value %}{{ form.description.value }}{% endif %}</textarea>
-          {% for error in form.errors.description %}
-            <span class="help-block">{{ error }}</span>
-          {% endfor %}
+        
+        <div class="control-group {% if form.description.errors %}error{% endif %}">
+          <div class="controls">
+            <label>Description</label>
+            <span class="help-block">{{ form.description.help_text }}</span>
+            <textarea rows="5" class="input-xxlarge" name="description">{% if form.description.value %}{{ form.description.value }}{% endif %}</textarea>
+            {% for error in form.errors.description %}
+              <span class="help-block">{{ error }}</span>
+            {% endfor %}
+          </div>
         </div>
-      </div>
-      
-      <div class="control-group {% if form.entrance_fee.errors %}error{% endif %}">
-        <div class="controls">
-          <label>Buy In</label>
-          <span class="help-block">This is how many credits users will need to ante up to get into the tournament.</span>
-          <input name="entrance_fee" type="number" {% if form.entrance_fee.value %}value="{{ form.entrance_fee.value }}"{% endif %} />
-          {% for error in form.errors.entrance_fee %}
-            <span class="help-block">{{ error }}</span>
-          {% endfor %}
+        
+        <div class="control-group {% if form.entrance_fee.errors %}error{% endif %}">
+          <div class="controls">
+            <label>Buy In</label>
+            <span class="help-block">This is how many credits users will need to ante up to get into the tournament.</span>
+            <input name="entrance_fee" type="number" {% if form.entrance_fee.value %}value="{{ form.entrance_fee.value }}"{% endif %} />
+            {% for error in form.errors.entrance_fee %}
+              <span class="help-block">{{ error }}</span>
+            {% endfor %}
+          </div>
         </div>
-      </div>
-      
-      <div class="control-group {% if form.is_public.errors %}error{% endif %}">
-        <div class="controls">
-          <label>Tournament Visibility</label>
-          <span class="help-block">If the tournament isn't public then only those given a link to the tournament will be able to find it.</span>
-          <label class="checkbox">
-            <input type="checkbox" name="is_public" {% if form.is_public.value %}checked="{{ form.is_public.value }}"{% endif %} /> Check this to make the tournament public.
-          </label>
-          {% for error in form.errors.is_public %}
-            <span class="help-block">{{ error }}</span>
-          {% endfor %}
-        </div>
-      </div> 
-    </fieldset>
-    <input class="btn btn-primary" type="submit" value="Add Tournament">
-  </form>
+        
+        <div class="control-group {% if form.is_public.errors %}error{% endif %}">
+          <div class="controls">
+            <label>Tournament Visibility</label>
+            <span class="help-block">If the tournament isn't public then only those given a link to the tournament will be able to find it.</span>
+            <label class="checkbox">
+              <input type="checkbox" name="is_public" {% if form.is_public.value %}checked="{{ form.is_public.value }}"{% endif %} /> Check this to make the tournament public.
+            </label>
+            {% for error in form.errors.is_public %}
+              <span class="help-block">{{ error }}</span>
+            {% endfor %}
+          </div>
+        </div> 
+      </fieldset>
+      <input class="btn btn-primary" type="submit" value="Add Tournament">
+    </form>
+  </section>
 </div>
 {% endblock %}
