--- a/templates/wagers/tournaments/open-list.html
+++ b/templates/wagers/tournaments/open-list.html
@@ -1,12 +1,14 @@
 {% extends "scaffolding.html" %}
 {% block content %}
 <div class="container">
-  <ol class="unstyled">
-    {% for tourney in tournaments %}
-      <li><a href="{{ tourney.get_absolute_url }}">{{ tourney }}</a> created by {{ tourney.created_by }} on {{ tourney.created_on }}</li>
-    {% empty %}
-      <li>There are no open tournaments.</li>
-    {% endfor %}
-  </ol>
+  <section>
+    <ol class="unstyled">
+      {% for tourney in tournaments %}
+        <li><a href="{{ tourney.get_absolute_url }}">{{ tourney }}</a> created by {{ tourney.created_by }} on {{ tourney.created_on }}</li>
+      {% empty %}
+        <li>There are no open tournaments.</li>
+      {% endfor %}
+    </ol>
+  </section>
 </div>
 {% endblock %}
