Improved the use of spacing on the homepage.

--- a/templates/wagers/home.html
+++ b/templates/wagers/home.html
@@ -3,18 +3,18 @@
 <div class="container">
   <section>
     <div class="row-fluid">
-      <div class="teaser span6">
+      <div class="well teaser span6">
         <img src="/site_media/img/icons/Clipboard.png">
         <h1>Create A Tournament</h1>
-        <p>Betting on propositions takes place within tournaments. You control who gets to bet in the tournaments. If your looking to organize betting at your local office, bar, or anywhere else this is what your looking for. Just make the tournaments, tell us what you want people to bet on, and then send a link the tournament to your friends. Its simple.</p>
+        <p>Get people betting in three simple steps: Create a tournament, add propositions, and share the tournament with your friends.</p>
         <div class="lead">
           <a href="{% url 'add-tournament' %}">Create a tournament now!</a>
         </div>
       </div>
-      <div class="teaser span6">
+      <div class="well teaser span6">
         <img src="/site_media/img/icons/Chats.png">
         <h1>Join A Tournament</h1>
-        <p>Want to join tournamens that are open to the public? This might be what your looking for. However, if you were invited here by your friend you'll be able to go directly to the tournament that <i>they</i> created by clicking the link they should have given you.</p>
+        <p>Start playing without any hassle. Publically listed tournaments can be found by following the link below.</p>
         <div class="lead">
           <a href="{% url 'open-tournament-list' %}">Check out tournaments open to the public.</a>
         </div>
